# yquake2

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  CONTRIBUTE  LICENSE  Makefile  README  README.md  TODO  TODO.txt  appveyor.yml  client-todo  stringifyshaders.sh  weapon.c
.github/: win32.yml
src/client/: CMakeLists.txt  cl_cin.c  cl_console.c  cl_download.c  cl_effects.c  cl_entities.c  cl_ents.c  cl_fx.c  cl_http.c  cl_image.c  cl_input.c  cl_inv.c  cl_inventory.c  cl_keyboard.c  cl_lights.c  cl_main.c  cl_network.c  cl_newfx.c  cl_parse.c  cl_particles.c  cl_pred.c  cl_prediction.c  cl_screen.c  cl_scrn.c  cl_tempentities.c  cl_tent.c  cl_view.c  client.h  console.c  keys.c  menu.c  qmenu.c  ref.h  snd_mix.c
src/client/console/: console.c
src/client/console/header/: console.h
src/client/curl/: download.c  qcurl.c
src/client/curl/header/: download.h  qcurl.h
src/client/header/: client.h  console.h  http.h  input.h  keyboard.h  particles.h  ref.h  screen.h  vid.h
src/client/input/: gyro.c  input.h  keyboard.c  keys.c  keys.h  sdl.c  sdl2.c  sdl3.c
src/client/input/header/: GamepadMotion.cpp  gamepadmotion.h  gyro.h  gyrospace.h  input.h  keyboard.h
src/client/menu/: menu.c  qmenu.c  qmenu.h  videomenu.c
src/client/menu/header/: qmenu.h
src/client/refresh/: pathtracer.glsl  r_draw.c  r_image.c  r_light.c  r_lightmap.c  r_main.c  r_mesh.c  r_misc.c  r_model.c  r_pathtracing.c  r_surf.c  r_warp.c  ref_shared.h
src/client/refresh/constants/: anormtab.h  warpsin.h
src/client/refresh/files/: common.c  jpeg.c  md2.c  models.c  pcx.c  pvs.c  sp2.c  stb.c  stb_image.h  surf.c  wal.c
src/client/refresh/gl/: gl1_surf.c  qgl.c  r_draw.c  r_image.c  r_light.c  r_lightmap.c  r_main.c  r_md2.c  r_mesh.c  r_misc.c  r_model.c  r_scrap.c  r_sdl.c  r_sp2.c  r_surf.c  r_warp.c
src/client/refresh/gl/header/: local.h
src/client/refresh/gl1/: gl1_buffer.c  gl1_draw.c  gl1_image.c  gl1_light.c  gl1_lightmap.c  gl1_main.c  gl1_md2.c  gl1_mesh.c  gl1_misc.c  gl1_model.c  gl1_scrap.c  gl1_sdl.c  gl1_sp2.c  gl1_surf.c  gl1_warp.c  qgl.c
src/client/refresh/gl1/header/: local.h  model.h  qgl.h
src/client/refresh/gl3/: gl3_draw.c  gl3_image.c  gl3_light.c  gl3_lightmap.c  gl3_main.c  gl3_md2.c  gl3_mesh.c  gl3_misc.c  gl3_model.c  gl3_sdl.c  gl3_shaders.c  gl3_sp2.c  gl3_surf.c  gl3_warp.c
src/client/refresh/header/: local.h  model.h
src/client/refresh/soft/: r_aclip.c  r_alias.c  r_bsp.c  r_draw.c  r_edge.c  r_image.c  r_light.c  r_local.h  r_main.c  r_misc.c  r_model.c  r_model.h  r_part.c  r_poly.c  r_polyse.c  r_rast.c  r_scan.c  r_sprite.c  r_surf.c  sw_aclip.c  sw_alias.c  sw_bsp.c  sw_draw.c  sw_edge.c  sw_image.c  sw_light.c  sw_main.c  sw_misc.c  sw_model.c  sw_part.c  sw_poly.c  sw_polyse.c  sw_polyset.c  sw_rast.c  sw_scan.c  sw_sprite.c  sw_surf.c
src/client/refresh/vk/: vk_buffer.c  vk_cmd.c  vk_common.c  vk_device.c  vk_draw.c  vk_image.c  vk_light.c  vk_local.h  vk_mem_alloc.cpp  vk_mesh.c  vk_model.c  vk_pipeline.c  vk_rmain.c  vk_rmisc.c  vk_rsurf.c  vk_shaders.c  vk_swapchain.c  vk_util.c  vk_validation.c  vk_warp.c
src/client/sound/: ogg.c  openal.c  qal.c  qal_api.c  sdl.c  sdl2.c  snd_al.c  snd_dma.c  snd_mem.c  snd_mix.c  snd_ogg.c  snd_vorbis.c  snd_wav.c  sound.c  sound.h  wave.c
src/client/sound/header/: cdaudio.h  local.h  qal.h  qal_api.h  sound.h  stb_vorbis.h  vorbis.h
src/client/vid/: glimp_sdl.c  glimp_sdl2.c  glimp_sdl3.c  vid.c
src/client/vid/header/: ref.h  stb_image_write.h  vid.h
src/client/vid/icon/: q2icon64.h
src/game/: CMakeLists.txt  g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  laser.c
src/game/baseq2/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_ctf.c  g_ctf.h  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  game.h  m_actor.c  m_berserk.c  m_brain.c  m_gladiator.c  m_gunner.c  m_infantry.c  m_parasite.c  m_soldier.c  p_client.c  p_hud.c  p_menu.c  p_menu.h  p_trail.c  p_view.c  p_weapon.c  q_shared.c  q_shared.h
src/game/baseq2/header/: game.h  local.h
src/game/baseq2/player/: client.c  hud.c  trail.c  view.c  weapon.c
src/game/baseq2/savegame/: savegame.c
src/game/ctf/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_ctf.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_utils.c  g_weapon.c  game.h  m_move.c  p_hud.c  p_menu.h  q_shared.c  q_shared.h
src/game/header/: game.h  local.h
src/game/monster/berserker/: berserker.c
src/game/monster/boss2/: boss2.c  boss2.h
src/game/monster/boss3/: boss3.c  boss31.c  boss32.c
src/game/monster/brain/: brain.c
src/game/monster/chick/: chick.c  chick.h
src/game/monster/flipper/: flipper.c  flipper.h
src/game/monster/float/: float.c  float.h
src/game/monster/flyer/: flyer.c  flyer.h
src/game/monster/gladiator/: gladiator.c
src/game/monster/gunner/: gunner.c
src/game/monster/hover/: hover.c
src/game/monster/infantry/: infantry.c
src/game/monster/insane/: insane.c  insane.h
src/game/monster/medic/: medic.c  medic.h
src/game/monster/misc/: move.c  player.h
src/game/monster/mutant/: mutant.c  mutant.h
src/game/monster/parasite/: parasite.c
src/game/monster/soldier/: soldier.c  soldier.h
src/game/monster/supertank/: supertank.c
src/game/monster/tank/: tank.c
src/game/player/: client.c  hud.c  trail.c  view.c  weapon.c
src/game/quake2/: g_ai.c  g_items.c  g_main.c  g_spawn.c  g_weapon.c  m_actor.c  m_boss2.c  m_boss3.c  m_boss31.c  m_boss32.c  m_brain.c  m_chick.c  m_flipper.c  m_flyer.c  m_gladiator.c  m_hover.c  m_mutant.c  m_parasite.c  m_tank.c  q_shared.c  q_shared.h
src/game/savegame/: savegame.c  savegame.h
src/game/savegame/tables/: clientfields.h  entfields.h  fields.h  gamefunc_decs.h  gamefunc_list.h  gamemmove_decs.h  gamemmove_list.h  levelfields.h  stfields.h
(+762 files in other folders)
